# TeleGo-

./: .env.example  .gitignore  App.tsx  Dockerfile  README.md  README_DEPLOY.md  VERCEL_SETUP.md  greenlet_install_log.txt  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  types.ts
backend/: .gitignore  README.md  db.py  dispatch.py  init_db.py  main.py  models.py  requirements.txt  schemas.py  security.py  telego.db  websocket_manager.py
backend/roteadores/: auth.py  orders.py  restaurants.py  users.py
backend/routers/: __init__.py  auth.py  couriers.py  orders.py  restaurants.py  users.py  websocket.py
components/: CourierDashboard.tsx  HistoryScreen.tsx  LandingPage.tsx  Layout.tsx  ProfileScreen.tsx  RestaurantDashboard.tsx
services/: api.ts  authService.ts  geminiService.ts
src/: env.d.ts
tests/: test_dispatch.py
